# multi-product-book-scrapper

./: .gitignore  README.md  fetch_urls.py  logger_setup.py  main.py  notifier.py  pyproject.toml  scrapper.py  storage.py
